objects/webhook2__c.object
<CustomObject>
    <fields>
        <fullName>Number__c</fullName>
        <label>Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Text__c</fullName>
        <label>Text</label>
        <length>22</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>email__c</fullName>
        <label>email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>phone__c</fullName>
        <label>phone</label>
        <type>Phone</type>
    </fields>
    <label>webhook2</label>
    <nameField>
        <label>webhook2 Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>webhook2s</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>